--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
+  "devDependencies": {
+    "vercel": "^23.1.2"
+  },
   "description": ""
 }
