--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,9 @@
       {
         "src": "frontend/package.json",
         "use": "@vercel/static-build",
-        "config": { "distDir": "build" }
+        "config": {
+          "distDir": "frontend/build"
+        }      
       }
     ],
     "routes": [
