--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "vercel-build": "npm run build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "npm start --prefix frontend",
+    "dev:backend": "npm start --prefix backend"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/bootstrap": "^5.2.10"
+    "@types/bootstrap": "^5.2.10",
+    "concurrently": "^8.2.2"
   }
 }
