--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,6 @@ node_modules
 # testing
 /coverage
 
-# production
-frontend/build
-
 # misc
 .DS_Store
 .env.local
@@ -30,3 +27,4 @@ yarn-error.log*
 
 # Ignore other files/folders
 .DS_Store
+.vercel
